--- a/client/main.css
+++ b/client/main.css
@@ -67,7 +67,7 @@ iframe.activity-contents-wrap {
   height: 150px; */
   overflow: hidden;
   background-color: #fff;
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
   display: grid;
   grid-template-areas: "handle powerbar" "handle activity";
   grid-template-rows: 1.5em 1fr;
@@ -75,10 +75,19 @@ iframe.activity-contents-wrap {
   resize: both;
   min-width: 100px;
   min-height: 100px;
+  box-shadow: 2px 4px 16px 2px rgba(0,0,0,0.3), 2px 4px 8px 2px rgba(0,0,0,0.2);
 }
 .shell-window-handle {
   grid-area: handle;
-  background-color: #33f;
+  background-color: #87b3f3;
+  display: flex;
+  cursor: grab;
+}
+.shell-window-grip {
+  border-left: 2px solid #3c7fe8;
+  border-right: 2px solid #3c7fe8;
+  margin: 1em 30%;
+  flex: 1;
 }
 .shell-powerbar {
   grid-area: powerbar;
