--- a/client/main.css
+++ b/client/main.css
@@ -68,7 +68,7 @@ iframe.activity-contents-wrap {
   background-color: #fff;
   /* border: 2px solid gray; */
   display: grid;
-  grid-template-areas: "handle powerbar" "handle activity";
+  grid-template-areas: "rollupbtn powerbar" "handle activity";
   grid-template-rows: 1.5em 1fr;
   grid-template-columns: 1.5em 1fr;
   resize: both;
@@ -77,10 +77,14 @@ iframe.activity-contents-wrap {
   box-shadow: 2px 4px 16px 2px rgba(0,0,0,0.3), 2px 4px 8px 2px rgba(0,0,0,0.2);
 }
 .shell-window-handle {
-  grid-area: handle;
+  grid-area: powerbar / handle / handle / handle;
   background-color: #87b3f3;
+  transition: 100ms linear background-color;
   display: flex;
   cursor: grab;
+}
+.shell-window-handle:hover {
+  background-color: #6da3f2;
 }
 .shell-window-grip {
   border-left: 2px solid #3c7fe8;
@@ -88,7 +92,7 @@ iframe.activity-contents-wrap {
   margin: 1em 30%;
   flex: 1;
 }
-.shell-powerbar {
+.shell-powerbar { /* TODO: rename to window-bar or something*/
   grid-area: powerbar;
   display: flex;
   margin: 0;
@@ -96,10 +100,23 @@ iframe.activity-contents-wrap {
   color: #eee;
   overflow: hidden;
 }
-.shell-powerbar select {
+.shell-powerbar select, .shell-powerbar button {
   background-color: #333;
   color: #eee;
   padding: 0 1em;
+}
+.window-rollup-toggle {
+  grid-area: rollupbtn;
+  margin: 0.5em;
+  padding: 0;
+}
+.window-title {
+  flex: 1;
+  align-self: center;
+}
+.window-buttons {
+  display: flex;
+  justify-content: stretch;
 }
 
 .react-draggable-transparent-selection,
