--- a/client/main.css
+++ b/client/main.css
@@ -1,10 +1,12 @@
 body {
-  padding: 0;
   font-family: sans-serif;
-  margin: 0;
 }
 
-#react-target {
+body.shell-workspace-floating {
+  padding: 0;
+  margin: 0;
+}
+body.shell-workspace-floating #react-target {
   display: grid;
   height: 100vh;
   grid-template-areas: "powerbar powerbar" "nav activity";
@@ -12,6 +14,7 @@ body {
   grid-template-columns: min-content 1fr;
   /* gap: 1em; */
 }
+
 .activity-contents-wrap {
   grid-area: activity;
 }
