--- a/private/apps/src/market/ui.css
+++ b/private/apps/src/market/ui.css
@@ -9,7 +9,8 @@
   border-radius: 10px;
   box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.1);
 }
-.listing-row:hover .app-icon {
+.listing-row:hover .app-icon,
+.detail-page .app-icon {
   background-color: #fff;
 }
 
