--- a/client/main.css
+++ b/client/main.css
@@ -14,6 +14,10 @@ body.shell-workspace-floating #react-target, .activity-shell-parent {
   grid-template-columns: min-content 1fr;
   /* gap: 1em; */
 }
+body.fill-body {
+  padding: 0;
+  margin: 0;
+}
 
 .activity-contents-wrap {
   grid-area: activity;
