--- a/client/main.css
+++ b/client/main.css
@@ -51,6 +51,32 @@ iframe.activity-contents-wrap {
   display: grid;
   overflow: hidden;
   z-index: 10;
+  grid-template-areas: "tabs main";
+  grid-template-columns: 12em 1fr;
+  /* gap: 1em; */
+}
+.shell-grid-layer .shell-tabs {
+  grid-area: tabs;
+  display: flex;
+  gap: 0.25em;
+  flex-direction: column;
+}
+.shell-grid-layer .shell-tabs button {
+  border: none;
+  text-align: left;
+  background-color: #eee;
+  padding: 0.25em 0.5em;
+  margin-right: 1em;
+  border-radius: 0 8px 8px 0;
+}
+@media (max-width: 800px) {
+  /* TODO: proper mobile display */
+  .shell-grid-layer {
+    grid-template-columns: 0 1fr;
+  }
+  /* .shell-grid-layer .shell-tabs {
+    display: none;
+  } */
 }
 
 .shell-backdrop {
@@ -83,12 +109,16 @@ iframe.activity-contents-wrap {
   box-shadow: 2px 4px 16px 2px rgba(0,0,0,0.3), 2px 4px 8px 2px rgba(0,0,0,0.2);
 }
 .shell-grid-layer .shell-window {
-  grid-area: 1 / 1;
+  grid-area: main;
   grid-template-areas: "powerbar" "activity";
   grid-template-rows: 2em 1fr;
   grid-template-columns: 1fr;
+  border-left: 1px solid gray;
 }
-.shell-window.topmost {
+.shell-grid-layer .shell-window:not(.topmost) {
+  display: none;
+}
+.shell-floating-layer .shell-window.topmost {
   box-shadow:
     2px 4px 56px 4px rgba(0,0,0,0.4),
     2px 4px 32px 4px rgba(0,0,0,0.3),
