--- a/client/main.css
+++ b/client/main.css
@@ -264,6 +264,68 @@ iframe.activity-contents-wrap {
   font-size: 1.2em;
 }
 
+.splash-modal {
+  background-color: #ffffff;
+  color: #161616;
+  box-shadow: 2px 5px 20px 5px rgba(0,0,0,0.2);
+}
+.splash-modal h1, .splash-modal h2 {
+  margin: 0;
+}
+@media (prefers-color-scheme: dark) {
+  .splash-modal {
+    background-color: #2a2a2a;
+    color: #f3f3f3;
+    box-shadow: 2px 5px 40px 10px rgba(0,0,0,0.4);
+  }
+}
+
+.splash-parent {
+  display: grid;
+  /* gridTemplateColumns: '1fr 40em 1fr',
+  gridTemplateRows: '1fr 40em 1fr', */
+  grid-template-columns: minmax(1em, 1fr) minmax(min-content, 40em) minmax(1em, 1fr);
+  grid-template-rows: minmax(1em, 1fr) minmax(50%, 40em) minmax(1em, 1fr);
+}
+@media (max-width: 800px) {
+  .splash-parent {
+    grid-template-columns: 0fr 1fr 0fr;
+    grid-template-rows: 0fr 1fr 0fr;
+  }
+}
+
+
+.launcher-window a.launcher-button {
+  color: #000;
+}
+@media (prefers-color-scheme: dark) {
+  .launcher-window a.launcher-button {
+    color: #eee;
+  }
+}
+
+.launcher-window.wide-items .launcher-button {
+  flex: 1 0 15em;
+  display: grid;
+  grid-template-areas: 'icon title' 'icon desc';
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: minmax(1.8em, min-content) 1fr;
+  gap: 0.25em 1em;
+  justify-items: flex-start;
+}
+.launcher-window.wide-items .appIcon {
+  grid-area: icon;
+}
+.launcher-window.wide-items .appTitle {
+  grid-area: title;
+  font-size: 1.1em;
+  font-weight: 600;
+  align-self: flex-end;
+}
+.launcher-window.wide-items .appDesc {
+  grid-area: desc;
+}
+
 .launcher-window {
   padding: 0.5em;
   box-sizing: border-box;
@@ -275,11 +337,11 @@ iframe.activity-contents-wrap {
   margin: 0;
 }
 @media (prefers-color-scheme: dark) {
-  .launcher-window button {
+  .launcher-window .launcher-button {
     color: #eee;
   }
 }
-.launcher-window button {
+.launcher-window .launcher-button {
   flex-basis: 10em;
   display: grid;
   justify-items: center;
@@ -288,22 +350,23 @@ iframe.activity-contents-wrap {
   gap: 0.5em;
   border-width: 0;
   cursor: pointer;
+  text-decoration: none;
 }
-.launcher-window button:hover {
+.launcher-window .launcher-button:hover {
   background-color: rgba(0,0,0,0.05);
 }
 @media (prefers-color-scheme: dark) {
-  .launcher-window button:hover {
+  .launcher-window .launcher-button:hover {
     background-color: rgba(255,255,255,0.05);
   }
 }
-.launcher-window button .appIcon {
+.launcher-window .launcher-button .appIcon {
   font-size: 32px;
   box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.2);
   transition: 50ms linear transform;
 }
 
-.launcher-window button:hover .appIcon {
+.launcher-window .launcher-button:hover .appIcon {
   transform: scale(1.1);
 }
 
