--- a/imports/ui/ViewportSwitcher.css
+++ b/imports/ui/ViewportSwitcher.css
@@ -1,9 +1,9 @@
 
 .switcher-menu {
+  grid-area: powerbar;
   background-color: #eee;
   color: #333;
   border-right: 1px solid #ccc;
-  overflow-y: auto;
 }
 .switcher-menu select, .switcher-menu button {
   background-color: #eee;
@@ -74,9 +74,16 @@
   border-radius: 50%;
 }
 
+
 @media (min-width: 1024px) {
+  /* wide */
   .switcher-root {
     grid-template-columns: 10em 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 'powerbar content';
+  }
+  .switcher-menu {
+    overflow-y: auto;
   }
   .switcher-icon .switcher-profile-photo {
     width: 5em;
@@ -85,7 +92,32 @@
     /* margin-right: 1em; */
   }
 }
-@media (max-width: 1023px) {
+@media (max-width: 1023px) and (min-width: 701px) {
+  /* narrow */
+  .switcher-root {
+    grid-template-columns: 5em 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 'powerbar content';
+  }
+  .switcher-menu {
+    overflow-y: auto;
+  }
+  .switcher-menu .one-tab button[class=action] {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  /* portrait */
+  .switcher-root {
+    grid-template-columns: 1fr;
+    grid-template-rows: 3em 1fr;
+    grid-template-areas: 'powerbar' 'content';
+  }
+  .switcher-menu {
+    overflow-x: auto;
+    flex-direction: row;
+  }
   .switcher-menu .one-tab button[class=action] {
     display: none;
   }
@@ -107,4 +139,9 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+
+.switcher-content {
+  grid-area: content;
 }
